--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 
      <!-- FOntAwesome -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 
      
     <!--
